<resources>
  <string name="app_name">CalendarView</string>

  <!--suncity widget-->
  <string name="sans_serif" translatable="false">sans-serif</string>
  <string name="confirm_date">确定日期</string>
  <string name="monday_short">一</string>
  <string name="tuesday_short">二</string>
  <string name="wednesday_short">三</string>
  <string name="thursday_short">四</string>
  <string name="friday_short">五</string>
  <string name="saturday_short">六</string>
  <string name="sunday_short">日</string>
</resources>
