<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <LinearLayout
      android:layout_width="match_parent" android:layout_height="wrap_content"
      android:background="@drawable/bg_drawable_calendar_header" android:orientation="vertical">

    <LinearLayout android:id="@+id/container_label"
        android:layout_width="match_parent" android:layout_height="28dp"
        android:paddingTop="8dp" android:paddingBottom="4dp">
      <TextView style="@style/Base.SuncityCalendarLabel" android:text="@string/sunday_short"/>
      <TextView style="@style/Base.SuncityCalendarLabel" android:text="@string/monday_short"/>
      <TextView style="@style/Base.SuncityCalendarLabel" android:text="@string/tuesday_short"/>
      <TextView style="@style/Base.SuncityCalendarLabel" android:text="@string/wednesday_short"/>
      <TextView style="@style/Base.SuncityCalendarLabel" android:text="@string/thursday_short"/>
      <TextView style="@style/Base.SuncityCalendarLabel" android:text="@string/friday_short"/>
      <TextView style="@style/Base.SuncityCalendarLabel" android:text="@string/saturday_short"/>
    </LinearLayout>

  </LinearLayout>
  <nimdanoob.calendarview.DatePickerView android:id="@+id/daypicker"
      android:layout_width="match_parent" android:layout_height="match_parent"
      android:layout_below="@id/container_label" android:background="@color/calendarBg"
      app:firstYear="2000"
      app:lastYear="2008"
      app:firstMonth="january"
      app:lastMonth="december"/>
</merge>